--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,20 @@
   <link rel="stylesheet" href="style.css">
   <title>Bikcraft - Beta</title>
 </head>
+
 <body>
-  <h1>Bikcraft</h1>
+  <div class="logo">
+    <img src="img/bikcraft.svg" alt="Logo bikcraft">
+  </div>
+
+  <div class="menu">
+    <a href="/">SOBRE</a>
+    <a href="/">PRODUTOS</a>
+    <a href="/">LOJAS</a>
+    <a href="/">CONTATO</a>
+  </div>
+
+
 </body>
+
 </html>
