--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
     <a href="/">CONTATO</a>
   </div>
 
+  <div class="container">
+    <div class="descricao">
+      <h1>Bicicletas Feitas a Mão</h1>
+      
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, magni itaque sed atque commodi provident quidem cupiditate in architecto autem, reprehenderit nihil praesentium rerum, laborum magnam ea animi quod modi.</p>
+
+      <a href="/">VER MAIS</a>
+    </div>
+  </div>
 
 </body>
 
