--- a/index.html
+++ b/index.html
@@ -10,27 +10,11 @@
 </head>
 
 <body>
-  <div class="logo">
-    <img src="img/bikcraft.svg" alt="Logo bikcraft">
-  </div>
+  <header></header>
 
-  <div class="menu">
-    <a href="/">SOBRE</a>
-    <a href="/">PRODUTOS</a>
-    <a href="/">LOJAS</a>
-    <a href="/">CONTATO</a>
-  </div>
+  <main></main>
 
-  <div class="container">
-    <div class="descricao">
-      <h1>Bicicletas Feitas a Mão</h1>
-      
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, magni itaque sed atque commodi provident quidem cupiditate in architecto autem, reprehenderit nihil praesentium rerum, laborum magnam ea animi quod modi.</p>
-
-      <a href="/">VER MAIS</a>
-    </div>
-  </div>
-
+  <footer></footer>
 </body>
 
 </html>
