--- a/index.html
+++ b/index.html
@@ -10,11 +10,60 @@
 </head>
 
 <body>
-  <header></header>
+  <header>
+    <section class="logo">
+      <img src="img/bikcraft.svg" alt="Logo Bikcraft">
+    </section>
 
-  <main></main>
+    <section class="menu">
+      <a href="/">SOBRE</a>
+      <a href="/">PRODUTOS</a>
+      <a href="/">LOJAS</a>
+      <a href="/">CONTATO</a>
+    </section>
+  </header>
 
-  <footer></footer>
+  <main>
+    <section class="conteudo-1">
+      <h1 class="titulo">Bicicletas Feitas a Mão</h1>
+
+      <p class="descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, ipsa doloribus dicta nostrum asperiores, et quidem cum aperiam fugiat velit dolor aut! Cumque quo quis possimus dignissimos minima eum deserunt!</p>
+
+      <a class="botao" href="/">VER MAIS</a>
+    </section>
+
+    <section class="conteudo-2">
+      <img class="foto-bicicleta" src="img/bicicleta.jpg" alt="Bicicleta Preta">
+    </section>
+
+    <section class="conteudo-3">
+      <h1 class="vantagens-titulo">VANTAGENS BIKCRAFT</h1>
+    </section>
+
+    <section class="conteudo-4">
+      <div class="motor-eletrico">
+        <img src="img/eletrica.svg" alt="Ícone Bike Eletrica">
+        <h2>Motor Elétrico</h2>
+        <p>Permite você viajar distâncias inimaginaveis com a sua bike.</p>
+      </div>
+
+      <div class="velocidade">
+        <img src="img/velocidade.svg" alt="Ícone Velocimetrô">
+        <h2>40 km/h</h2>
+        <p>A mais rápida bicicleta elétrica disponível no mercado.</p>
+      </div>
+
+      <div class="rastreador">
+        <img src="img/rastreador.svg" alt="Ícone Rastreador">
+        <h2>Rastreador</h2>
+        <p>Rastreador e sistema anti-furto para garatir sua tranquilidade.</p>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>Bikcraft. Direitos Reservados.</p>
+  </footer>
 </body>
 
 </html>
