--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   </main>
 
   <footer>
-    <p>Bikcraft. Direitos Reservados.</p>
+    <p class="rodape">Bikcraft. Todos Direitos Reservados.</p>
   </footer>
 </body>
 
