--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <section class="logo">
+    <section>
       <img src="img/bikcraft.svg" alt="Logo Bikcraft">
     </section>
 
@@ -25,7 +25,7 @@
 
   <main>
     <section class="conteudo-1">
-      <h1 class="titulo">Bicicletas Feitas a Mão</h1>
+      <h1>Bicicletas Feitas a Mão</h1>
 
       <p class="descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, ipsa doloribus dicta nostrum asperiores, et quidem cum aperiam fugiat velit dolor aut! Cumque quo quis possimus dignissimos minima eum deserunt!</p>
 
@@ -33,36 +33,36 @@
     </section>
 
     <section class="conteudo-2">
-      <img class="foto-bicicleta" src="img/bicicleta.jpg" alt="Bicicleta Preta">
+      <img src="img/bicicleta.jpg" alt="Bicicleta Preta">
     </section>
 
     <section class="conteudo-3">
-      <h1 class="vantagens-titulo">VANTAGENS BIKCRAFT</h1>
+      <h2 class="vantagens-titulo">VANTAGENS BIKCRAFT</h2>
     </section>
 
     <section class="conteudo-4">
-      <div class="motor-eletrico">
+      <div class="item">
         <img src="img/eletrica.svg" alt="Ícone Bike Eletrica">
-        <h2>Motor Elétrico</h2>
+        <h3>Motor Elétrico</h3>
         <p>Permite você viajar distâncias inimaginaveis com a sua bike.</p>
       </div>
 
-      <div class="velocidade">
+      <div class="item">
         <img src="img/velocidade.svg" alt="Ícone Velocimetrô">
-        <h2>40 km/h</h2>
+        <h3>40 km/h</h3>
         <p>A mais rápida bicicleta elétrica disponível no mercado.</p>
       </div>
 
-      <div class="rastreador">
+      <div class="item">
         <img src="img/rastreador.svg" alt="Ícone Rastreador">
-        <h2>Rastreador</h2>
+        <h3>Rastreador</h3>
         <p>Rastreador e sistema anti-furto para garatir sua tranquilidade.</p>
       </div>
     </section>
   </main>
 
-  <footer>
-    <p class="rodape">Bikcraft. Todos Direitos Reservados.</p>
+  <footer class="rodape">
+    <p>Bikcraft. Todos Direitos Reservados.</p>
   </footer>
 </body>
 
