--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 </head>
 
 <body>
- Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti doloremque maiores pariatur quasi accusamus, officiis adipisci similique tempore blanditiis officia sint, excepturi dignissimos vel perspiciatis alias vitae culpa magnam sunt!
+  <header></header>
+
+  <main></main>
+
+  <footer></footer>
 </body>
 
 </html>
