--- a/index.html
+++ b/index.html
@@ -10,51 +10,59 @@
 </head>
 
 <body>
-  <header>
-    <img class="logo" src="img/bikcraft.svg" alt="Logo Bikcraft">
 
-    <div class="menu">
-      <a href="/">SOBRE</a>
-      <a href="/">PRODUTOS</a>
-      <a href="/">LOJAS</a>
-      <a href="/">CONTATO</a>
-    </div>
-  </header>
+  <!--HEADER-->
+  <img class="logo" src="img/bikcraft.svg" alt="Logo Bikcraft">
 
-  <main>
-    <div class="apresentacao">
-      <h2>Bicicletas Feitas a Mão</h2>
+  <div class="menu">
+    <a href="/">SOBRE</a>
+    <a href="/">PRODUTOS</a>
+    <a href="/">LOJAS</a>
+    <a href="/">CONTATO</a>
+  </div>
+
+  <!--MAIN-->
+  <div class="container">
+    <div class="introducao">
+
+      <h1>Bicicletas Feitas a Mão</h1>
 
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque reprehenderit libero atque dolorum nesciunt fugiat eveniet nobis minus dignissimos tempora similique, officiis esse at, alias ad blanditiis doloribus labore eum.</p>
 
-      <a href="/">VER MAIS</a>
+      <a class="botao" href="/">VER MAIS</a>
     </div>
 
     <img class="bicicleta-preta" src="img/bicicleta.jpg" alt="Bicicleta Preta">
 
-    <div class="texto-vantagem">
-      <h2>VANTAGENS BIKCRAFT</h2>
-    </div>
+    <h2 class="subtitulo">VANTAGENS BIKCRAFT</h2>
 
     <div class="vantagens">
-      <img src="img/eletrica.svg" alt="Icon Elétrica">
-      <h3>Motor Elétrico</h3>
-      <p>Dado o fluxo de dados atual, o módulo de recursão paralela superou o desempenho de compilação multi-plataforma de forma asincrona.</p>
+      <div class="vantagens-items">
+        <img src="img/eletrica.svg" alt="Icon Elétrica">
+        <h3>Motor Elétrico</h3>
+        <p>Desde ontem a noite um erro não identificado otimizou a renderização na compilação de templates literais.</p>
+      </div>
 
-      <img src="img/velocidade.svg" alt="Icon Velocimetro">
-      <h3>Vraau km/h</h3>
-      <p>Com este commit, a normalização da data corrigiu o bug no fechamento automático das tags.</p>
+      <div class="vantagens-items">
+        <img src="img/velocidade.svg" alt="Icon Velocimetro">
+        <h3>50 km/h</h3>
+        <p>Dado o fluxo de dados atual, o módulo de recursão paralela superou o desempenho de compilação multi-plataforma de forma asincrona.</p>
+      </div>
 
-      <img src="img/rastreador.svg" alt="Icon Rastreador">
-      <h3>Rastreador</h3>
-      <p>A equipe de suporte precisa saber que a normalização da data facilitou a resolução de conflito na organização alfanumérico dos arrays multidimensionais</p>
+      <div class="vantagens-items">
+        <img src="img/rastreador.svg" alt="Icon Rastreador">
+        <h3>Rastreador</h3>
+        <p>A equipe de suporte precisa saber que a normalização da data facilitou a resolução de conflito na organização alfanumérico dos arrays multidimensionais.</p>
+      </div>
+
     </div>
-  </main>
+  </div>
 
-  <footer>
-    <p class="paragrafo">Bikcraft - Direitos Reservados.</p>
-  </footer>
+  <!--FOOTER-->
+  <div class="paragrafo">
+    <p>Bikcraft - Direitos Reservados.</p>
+  </div>
+
 </body>
 
 </html>
-
